objects/Note__c.object
<CustomObject>
    <description>This Object used to store migrate Native Notes &amp; Attachments object from DL Bean.</description>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CreatedById</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Note</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsPrivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPrivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LastModifiedById</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Note1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Note</relationshipLabel>
        <relationshipName>Note</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Note</label>
    <nameField>
        <displayFormat>N-{00000000}</displayFormat>
        <label>Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Note</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>